# llm-negotiation-rl

./: .env.example  .gitignore  LICENSE  README.md  analysis.md  pyproject.toml
data/: check_splits.py  craigslist.py  craigslist_eval.csv  craigslist_gold.csv  craigslist_grpo_enriched.csv  synthetic_data.csv
grpo/: grpo_agent.py  grpo_env.py  grpo_eval.py  grpo_train.py
ppo/: ppo_agent.py  ppo_env.py  ppo_eval.py  ppo_train.py
sft/: sft_train.py
shared/: config.py  gae.py  local_buyer.py  models.py  reward.py  rollout_config.py
tests/: test_gae.py  test_reward.py  test_splits.py
