[project]
name = "rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "groq>=1.1.2",
    "gymnasium>=1.2.3",
    "openai>=2.30.0",
    "peft>=0.18.1",
    "safetensors>=0.5.0",
    "torch>=2.9.1",
    "transformers>=4.50.0",
]
